2009-12-07  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.11 and document the changes

2009-10-20  Armin Burgmeier  <armin@0x539.de>

	* src/connection.cpp (do_handshake): After TLS handshake, make also
	sure to call send() as a re-enabling function if we have data to send,
	on Windows. This can prevent a lockup after the TLS negotiation.

2009-10-12  Armin Burgmeier  <armin@0x539.de>

	* po/uk.po: Added Ukrainian translation by Yuri Chornoivan. Bug #479.

	* po/LINGUAS: Added uk.

2009-08-24  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.10 and document the changes

2009-08-24  Philipp Kern  <phil@0x539.de>

	* po/{he,nb,pt_BR,ru,sk,zh_CN}.po: Import Hebrew, Norwegian Bokmal,
	  Brazilian Portuguese, Russian, Slovak and Simplified Chinese
	  from Ubuntu Jaunty's translation branch.

2009-08-24  Philipp Kern  <phil@0x539.de>

        * po/{es,fr,it,pt}.po: Update existing transitions from Ubuntu
          Jaunty's translation branch.

2009-06-20  Armin Burgmeier  <armin@0x539.de>

	* configure.ac: Removed superfluous comma.

2009-06-01  Priit Laes  <plaes@plaes.org>

	* net6.pc.in: Removed @addcflags@ from cflags, as this variable does
	no longer exist anymore.

2009-05-31  Priit Laes  <plaes@plaes.org>

	* Makefile.am: Don't use LIBGNUTLS_LIBS and LIBGNUTLS_CFLAGS anymore,
	as these variables are no longer set anyway.

	* m4/libgnutls.m4: Removed. This file is no longer required.

2009-05-29  Philipp Kern  <phil@0x539.de>

	* src/socket.cpp: set SO_REUSEADDR on server sockets

2009-05-29  Philipp Kern  <phil@0x539.de>

	* inc/server.hpp: fix is_open to include serv6_sock

2009-05-22  Armin Burgmeier  <armin@0x539.de>

	* configure.ac: Locate gnutls via pkg-config, not libgnutls-config
	which newer versions no longer have.

2009-01-03  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 1.3.9 and document the changes

2009-01-03  Armin Burgmeier  <armin@0x539.de>
